@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.SettableFuture;
 import lombok.extern.slf4j.Slf4j;
 import org.thingsboard.common.util.ThingsBoardThreadFactory;
+import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.stats.MessagesStats;
 
 import java.util.ArrayList;
@@ -29,14 +30,13 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Slf4j
-public class TbSqlBlockingQueue<E> implements TbSqlQueue<E> {
+public class TbSqlBlockingQueue<E, R> implements TbSqlQueue<E, R> {
 
-    private final BlockingQueue<TbSqlQueueElement<E>> queue = new LinkedBlockingQueue<>();
+    private final BlockingQueue<TbSqlQueueElement<E, R>> queue = new LinkedBlockingQueue<>();
     private final TbSqlBlockingQueueParams params;
 
     private ExecutorService executor;
@@ -48,17 +48,17 @@ public class TbSqlBlockingQueue<E> implements TbSqlQueue<E> {
     }
 
     @Override
-    public void init(ScheduledLogExecutorComponent logExecutor, Consumer<List<E>> saveFunction, Comparator<E> batchUpdateComparator, int index) {
+    public void init(ScheduledLogExecutorComponent logExecutor, Function<List<E>, List<R>> saveFunction, Comparator<E> batchUpdateComparator, Function<List<TbSqlQueueElement<E, R>>, List<TbSqlQueueElement<E, R>>> filter, int index) {
         executor = Executors.newSingleThreadExecutor(ThingsBoardThreadFactory.forName("sql-queue-" + index + "-" + params.getLogName().toLowerCase()));
         executor.submit(() -> {
             String logName = params.getLogName();
             int batchSize = params.getBatchSize();
             long maxDelay = params.getMaxDelay();
-            List<TbSqlQueueElement<E>> entities = new ArrayList<>(batchSize);
+            final List<TbSqlQueueElement<E, R>> entities = new ArrayList<>(batchSize);
             while (!Thread.interrupted()) {
                 try {
                     long currentTs = System.currentTimeMillis();
-                    TbSqlQueueElement<E> attr = queue.poll(maxDelay, TimeUnit.MILLISECONDS);
+                    TbSqlQueueElement<E, R> attr = queue.poll(maxDelay, TimeUnit.MILLISECONDS);
                     if (attr == null) {
                         continue;
                     } else {
@@ -70,12 +70,27 @@ public class TbSqlBlockingQueue<E> implements TbSqlQueue<E> {
                         log.debug("[{}] Going to save {} entities", logName, entities.size());
                         log.trace("[{}] Going to save entities: {}", logName, entities);
                     }
-                    Stream<E> entitiesStream = entities.stream().map(TbSqlQueueElement::getEntity);
-                    saveFunction.accept(
-                            (params.isBatchSortEnabled() ? entitiesStream.sorted(batchUpdateComparator) : entitiesStream)
-                                    .collect(Collectors.toList())
-                    );
-                    entities.forEach(v -> v.getFuture().set(null));
+
+                    List<TbSqlQueueElement<E, R>> entitiesToSave = filter.apply(entities);
+
+                    if (params.isBatchSortEnabled()) {
+                        entitiesToSave = entitiesToSave.stream().sorted((o1, o2) -> batchUpdateComparator.compare(o1.getEntity(), o2.getEntity())).toList();
+                    }
+
+                    List<R> result = saveFunction.apply(entitiesToSave.stream().map(TbSqlQueueElement::getEntity).collect(Collectors.toList()));
+
+                    if (params.isWithResponse()) {
+                        for (int i = 0; i < entitiesToSave.size(); i++) {
+                            entitiesToSave.get(i).getFuture().set(result.get(i));
+                        }
+
+                        if (entities.size() > entitiesToSave.size()) {
+                            CollectionsUtil.diffLists(entitiesToSave, entities).forEach(v -> v.getFuture().set(null));
+                        }
+                    } else {
+                        entities.forEach(v -> v.getFuture().set(null));
+                    }
+
                     stats.incrementSuccessful(entities.size());
                     if (!fullPack) {
                         long remainingDelay = maxDelay - (System.currentTimeMillis() - currentTs);
@@ -83,23 +98,28 @@ public class TbSqlBlockingQueue<E> implements TbSqlQueue<E> {
                             Thread.sleep(remainingDelay);
                         }
                     }
-                } catch (Exception e) {
-                    stats.incrementFailed(entities.size());
-                    entities.forEach(entityFutureWrapper -> entityFutureWrapper.getFuture().setException(e));
-                    if (e instanceof InterruptedException) {
+                } catch (Throwable t) {
+                    if (t instanceof InterruptedException) {
                         log.info("[{}] Queue polling was interrupted", logName);
                         break;
                     } else {
-                        log.error("[{}] Failed to save {} entities", logName, entities.size(), e);
+                        log.error("[{}] Failed to save {} entities", logName, entities.size(), t);
+                        try {
+                            stats.incrementFailed(entities.size());
+                            entities.forEach(entityFutureWrapper -> entityFutureWrapper.getFuture().setException(t));
+                        } catch (Throwable th) {
+                            log.error("[{}] Failed to set future exception", logName, th);
+                        }
                     }
                 } finally {
                     entities.clear();
                 }
             }
+            log.info("[{}] Queue polling completed", logName);
         });
 
         logExecutor.scheduleAtFixedRate(() -> {
-            if (queue.size() > 0 || stats.getTotal() > 0 || stats.getSuccessful() > 0 || stats.getFailed() > 0) {
+            if (!queue.isEmpty() || stats.getTotal() > 0 || stats.getSuccessful() > 0 || stats.getFailed() > 0) {
                 log.info("Queue-{} [{}] queueSize [{}] totalAdded [{}] totalSaved [{}] totalFailed [{}]", index,
                         params.getLogName(), queue.size(), stats.getTotal(), stats.getSuccessful(), stats.getFailed());
                 stats.reset();
@@ -115,8 +135,8 @@ public class TbSqlBlockingQueue<E> implements TbSqlQueue<E> {
     }
 
     @Override
-    public ListenableFuture<Void> add(E element) {
-        SettableFuture<Void> future = SettableFuture.create();
+    public ListenableFuture<R> add(E element) {
+        SettableFuture<R> future = SettableFuture.create();
         queue.add(new TbSqlQueueElement<>(future, element));
         stats.incrementTotal();
         return future;
