@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,11 +17,13 @@ package org.thingsboard.server.dao.service.timeseries;
 
 import com.datastax.oss.driver.api.core.uuid.Uuids;
 import lombok.extern.slf4j.Slf4j;
+import org.assertj.core.data.Offset;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.thingsboard.server.common.data.EntityView;
 import org.thingsboard.server.common.data.Tenant;
 import org.thingsboard.server.common.data.id.DeviceId;
@@ -32,7 +34,9 @@ import org.thingsboard.server.common.data.kv.BaseDeleteTsKvQuery;
 import org.thingsboard.server.common.data.kv.BaseReadTsKvQuery;
 import org.thingsboard.server.common.data.kv.BasicTsKvEntry;
 import org.thingsboard.server.common.data.kv.BooleanDataEntry;
+import org.thingsboard.server.common.data.kv.DataType;
 import org.thingsboard.server.common.data.kv.DoubleDataEntry;
+import org.thingsboard.server.common.data.kv.JsonDataEntry;
 import org.thingsboard.server.common.data.kv.KvEntry;
 import org.thingsboard.server.common.data.kv.LongDataEntry;
 import org.thingsboard.server.common.data.kv.ReadTsKvQuery;
@@ -47,7 +51,9 @@ import org.thingsboard.server.dao.timeseries.TimeseriesService;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -64,12 +70,15 @@ import static org.junit.Assert.assertNotNull;
 public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Autowired
-    TimeseriesService tsService;
+    protected TimeseriesService tsService;
 
     @Autowired
     EntityViewService entityViewService;
 
-    static final int MAX_TIMEOUT = 30;
+    @Value("${database.ts.type}")
+    String databaseTsLatestType;
+
+    protected static final int MAX_TIMEOUT = 30;
 
     private static final String STRING_KEY = "stringKey";
     private static final String LONG_KEY = "longKey";
@@ -84,7 +93,8 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
     KvEntry doubleKvEntry = new DoubleDataEntry(DOUBLE_KEY, Double.MAX_VALUE);
     KvEntry booleanKvEntry = new BooleanDataEntry(BOOLEAN_KEY, Boolean.TRUE);
 
-    private TenantId tenantId;
+    protected TenantId tenantId;
+    DeviceId deviceId = new DeviceId(Uuids.timeBased());
 
     @Before
     public void before() {
@@ -102,8 +112,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindAllLatest() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 1);
         saveEntries(deviceId, TS);
@@ -116,20 +124,25 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
         assertNotNull(tsList);
         assertEquals(4, tsList.size());
-        for (int i = 0; i < tsList.size(); i++) {
-            assertEquals(TS, tsList.get(i).getTs());
+        for (TsKvEntry entry : tsList) {
+            assertEquals(TS, entry.getTs());
         }
 
-        Collections.sort(tsList, (o1, o2) -> o1.getKey().compareTo(o2.getKey()));
+        Collections.sort(tsList, Comparator.comparing(KvEntry::getKey));
 
         List<TsKvEntry> expected = Arrays.asList(
                 toTsEntry(TS, stringKvEntry),
                 toTsEntry(TS, longKvEntry),
                 toTsEntry(TS, doubleKvEntry),
                 toTsEntry(TS, booleanKvEntry));
-        Collections.sort(expected, (o1, o2) -> o1.getKey().compareTo(o2.getKey()));
+        Collections.sort(expected, Comparator.comparing(KvEntry::getKey));
 
-        assertEquals(expected, tsList);
+        for (int i = 0; i < expected.size(); i++) {
+            var expectedEntry = expected.get(i);
+            var actualEntry = tsList.get(i);
+            equalsIgnoreVersion(expectedEntry, actualEntry);
+
+        }
     }
 
     private EntityView saveAndCreateEntityView(DeviceId deviceId, List<String> timeseries) {
@@ -146,34 +159,96 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindLatest() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 1);
         saveEntries(deviceId, TS);
 
         List<TsKvEntry> entries = tsService.findLatest(tenantId, deviceId, Collections.singleton(STRING_KEY)).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(1, entries.size());
-        Assert.assertEquals(toTsEntry(TS, stringKvEntry), entries.get(0));
+        equalsIgnoreVersion(toTsEntry(TS, stringKvEntry), entries.get(0));
+    }
+
+    @Test
+    public void testFindLatestOpt_givenSaveWithHistoricalNonOrderedTS() throws Exception {
+        if (databaseTsLatestType.equals("cassandra")) {
+            return;
+        }
+
+        save(tenantId, deviceId, toTsEntry(TS - 1, stringKvEntry));
+        save(tenantId, deviceId, toTsEntry(TS, stringKvEntry));
+        save(tenantId, deviceId, toTsEntry(TS - 10, stringKvEntry));
+        save(tenantId, deviceId, toTsEntry(TS - 11, stringKvEntry));
+
+        Optional<TsKvEntry> entryOpt = tsService.findLatest(tenantId, deviceId, STRING_KEY).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entryOpt).isNotNull().isPresent();
+        equalsIgnoreVersion(toTsEntry(TS, stringKvEntry), entryOpt.get());
+    }
+
+    @Test
+    public void testFindLatestOpt_givenSaveWithSameTSOverwriteValue() throws Exception {
+        save(tenantId, deviceId, toTsEntry(TS, new StringDataEntry(STRING_KEY, "old")));
+        save(tenantId, deviceId, toTsEntry(TS, new StringDataEntry(STRING_KEY, "new")));
+
+        Optional<TsKvEntry> entryOpt = tsService.findLatest(tenantId, deviceId, STRING_KEY).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entryOpt).isNotNull().isPresent();
+        equalsIgnoreVersion(toTsEntry(TS, new StringDataEntry(STRING_KEY, "new")), entryOpt.get());
+    }
+
+    public void testFindLatestOpt_givenSaveWithSameTSOverwriteTypeAndValue() throws Exception {
+        save(tenantId, deviceId, toTsEntry(TS, new JsonDataEntry("temp", "{\"hello\":\"world\"}")));
+        save(tenantId, deviceId, toTsEntry(TS, new BooleanDataEntry("temp", true)));
+        save(tenantId, deviceId, toTsEntry(TS, new LongDataEntry("temp", 100L)));
+        save(tenantId, deviceId, toTsEntry(TS, new DoubleDataEntry("temp", Math.PI)));
+        save(tenantId, deviceId, toTsEntry(TS, new StringDataEntry("temp", "NOOP")));
+
+        Optional<TsKvEntry> entryOpt = tsService.findLatest(tenantId, deviceId, STRING_KEY).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entryOpt).isNotNull().isPresent();
+        Assert.assertEquals(toTsEntry(TS, new StringDataEntry("temp", "NOOP")), entryOpt.orElse(null));
+    }
+
+    @Test
+    public void testFindLatestOpt() throws Exception {
+        saveEntries(deviceId, TS - 2);
+        saveEntries(deviceId, TS - 1);
+        saveEntries(deviceId, TS);
+
+        Optional<TsKvEntry> entryOpt = tsService.findLatest(tenantId, deviceId, STRING_KEY).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entryOpt).isNotNull().isPresent();
+        equalsIgnoreVersion(toTsEntry(TS, stringKvEntry), entryOpt.get());
+    }
+
+    @Test
+    public void testFindLatest_NotFound() throws Exception {
+        List<TsKvEntry> entries = tsService.findLatest(tenantId, deviceId, Collections.singleton(STRING_KEY)).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entries).hasSize(1);
+        TsKvEntry tsKvEntry = entries.get(0);
+        assertThat(tsKvEntry).isNotNull();
+        // null ts latest representation
+        assertThat(tsKvEntry.getKey()).isEqualTo(STRING_KEY);
+        assertThat(tsKvEntry.getDataType()).isEqualTo(DataType.STRING);
+        assertThat(tsKvEntry.getValue()).isNull();
+        assertThat(tsKvEntry.getTs()).isCloseTo(System.currentTimeMillis(), Offset.offset(TimeUnit.MINUTES.toMillis(1)));
+    }
+
+    @Test
+    public void testFindLatestOpt_NotFound() throws Exception {
+        Optional<TsKvEntry> entryOpt = tsService.findLatest(tenantId, deviceId, STRING_KEY).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertThat(entryOpt).isNotNull().isNotPresent();
     }
 
     @Test
     public void testFindLatestWithoutLatestUpdate() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 1);
         saveEntriesWithoutLatest(deviceId, TS);
 
         List<TsKvEntry> entries = tsService.findLatest(tenantId, deviceId, Collections.singleton(STRING_KEY)).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(1, entries.size());
-        Assert.assertEquals(toTsEntry(TS - 1, stringKvEntry), entries.get(0));
+        equalsIgnoreVersion(toTsEntry(TS - 1, stringKvEntry), entries.get(0));
     }
 
     @Test
     public void testFindByQueryAscOrder() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, TS - 3);
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 1);
@@ -187,7 +262,7 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         Assert.assertEquals(toTsEntry(TS - 2, stringKvEntry), entries.get(1));
         Assert.assertEquals(toTsEntry(TS - 1, stringKvEntry), entries.get(2));
 
-        EntityView entityView = saveAndCreateEntityView(deviceId, Arrays.asList(STRING_KEY));
+        EntityView entityView = saveAndCreateEntityView(deviceId, List.of(STRING_KEY));
 
         entries = tsService.findAll(tenantId, entityView.getId(), queries).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(3, entries.size());
@@ -198,7 +273,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodEqualsOneMilisecondPeriod() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS - 1L);
         saveEntries(deviceId, TS);
         saveEntries(deviceId, TS + 1L);
@@ -218,7 +292,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodEqualsInterval() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS - 1L);
         for (long i = TS; i <= TS + 100L; i += 10L) {
             saveEntries(deviceId, i);
@@ -240,7 +313,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodHaveTwoIntervalWithEqualsLength() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS - 1L);
         for (long i = TS; i <= TS + 100000L; i += 10000L) {
             saveEntries(deviceId, i);
@@ -264,7 +336,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodHaveTwoInterval_whereSecondShorterThanFirst() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS - 1L);
         for (long i = TS; i <= TS + 80000L; i += 10000L) {
             saveEntries(deviceId, i);
@@ -288,7 +359,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodHaveTwoIntervalWithEqualsLength_whereNotAllEntriesInRange() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         for (long i = TS - 1L; i <= TS + 100000L + 1L; i += 10000) {
             saveEntries(deviceId, i);
         }
@@ -310,7 +380,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQuery_whenPeriodHaveTwoInterval_whereSecondShorterThanFirst_andNotAllEntriesInRange() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         for (long i = TS - 1L; i <= TS + 100000L + 1L; i += 10000L) {
             saveEntries(deviceId, i);
         }
@@ -332,8 +401,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindByQueryDescOrder() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, TS - 3);
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 1);
@@ -347,7 +414,7 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         Assert.assertEquals(toTsEntry(TS - 2, stringKvEntry), entries.get(1));
         Assert.assertEquals(toTsEntry(TS - 3, stringKvEntry), entries.get(2));
 
-        EntityView entityView = saveAndCreateEntityView(deviceId, Arrays.asList(STRING_KEY));
+        EntityView entityView = saveAndCreateEntityView(deviceId, List.of(STRING_KEY));
 
         entries = tsService.findAll(tenantId, entityView.getId(), queries).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(3, entries.size());
@@ -358,7 +425,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindAllByQueries_verifyQueryId() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS);
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 10);
@@ -369,7 +435,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindAllByQueries_verifyQueryId_forEntityView() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         saveEntries(deviceId, TS);
         saveEntries(deviceId, TS - 2);
         saveEntries(deviceId, TS - 12);
@@ -388,8 +453,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testDeleteDeviceTsDataWithOverwritingLatest() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         saveEntries(deviceId, 10000);
         saveEntries(deviceId, 20000);
         saveEntries(deviceId, 30000);
@@ -408,7 +471,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindDeviceTsData() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         List<TsKvEntry> entries = new ArrayList<>();
 
         entries.add(save(deviceId, 5000, 100));
@@ -559,7 +621,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindDeviceLongAndDoubleTsData() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
         List<TsKvEntry> entries = new ArrayList<>();
 
         entries.add(save(deviceId, 5000, 100));
@@ -650,8 +711,6 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Test
     public void testSaveTs_RemoveTs_AndSaveTsAgain() throws Exception {
-        DeviceId deviceId = new DeviceId(Uuids.timeBased());
-
         save(deviceId, 2000000L, 95);
         save(deviceId, 4000000L, 100);
         save(deviceId, 6000000L, 105);
@@ -673,6 +732,31 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         assertEquals(3, list.size());
     }
 
+    @Test
+    public void shouldSaveEntryOfEachType() throws Exception {
+        BasicTsKvEntry booleanEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(1), new BooleanDataEntry("test", true));
+        BasicTsKvEntry stringEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(2), new StringDataEntry("test", "text"));
+        BasicTsKvEntry longEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(3), new LongDataEntry("test", 15L));
+        BasicTsKvEntry doubleEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(4), new DoubleDataEntry("test", 10.5));
+        BasicTsKvEntry jsonEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(5), new JsonDataEntry("test", "{\"test\":\"testValue\"}"));
+        List<TsKvEntry> timeseries = List.of(booleanEntry, stringEntry, longEntry, doubleEntry, jsonEntry);
+
+        for (TsKvEntry tsKvEntry : timeseries) {
+            save(tenantId, deviceId, tsKvEntry);
+        }
+
+        List<TsKvEntry> listUntil3Minutes = tsService.findAll(tenantId, deviceId, Collections.singletonList(new BaseReadTsKvQuery("test", 0L,
+                TimeUnit.MINUTES.toMillis(3), 1000, 10, Aggregation.NONE))).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertEquals(2, listUntil3Minutes.size());
+        assertThat(listUntil3Minutes).containsOnlyOnceElementsOf(List.of(
+                booleanEntry, stringEntry));
+
+        List<TsKvEntry> fullList = tsService.findAll(tenantId, deviceId, Collections.singletonList(new BaseReadTsKvQuery("test", 0L,
+                TimeUnit.MINUTES.toMillis(6), 1000, 10, Aggregation.NONE))).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertEquals(5, fullList.size());
+        assertThat(fullList).containsOnlyOnceElementsOf(timeseries);
+    }
+
     private TsKvEntry save(DeviceId deviceId, long ts, long value) throws Exception {
         TsKvEntry entry = new BasicTsKvEntry(ts, new LongDataEntry(LONG_KEY, value));
         tsService.save(tenantId, deviceId, entry).get(MAX_TIMEOUT, TimeUnit.SECONDS);
@@ -691,6 +775,9 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         return entry;
     }
 
+    private void save(TenantId tenantId, DeviceId deviceId, TsKvEntry tsKvEntry) throws Exception {
+        tsService.save(tenantId, deviceId, tsKvEntry).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+    }
 
     private void saveEntries(DeviceId deviceId, long ts) throws ExecutionException, InterruptedException, TimeoutException {
         tsService.save(tenantId, deviceId, toTsEntry(ts, stringKvEntry)).get(MAX_TIMEOUT, TimeUnit.SECONDS);
@@ -712,5 +799,10 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         return new BasicTsKvEntry(ts, entry);
     }
 
+    private static void equalsIgnoreVersion(TsKvEntry expected, TsKvEntry actual) {
+        assertEquals(expected.getKey(), actual.getKey());
+        assertEquals(expected.getValue(), actual.getValue());
+        assertEquals(expected.getTs(), actual.getTs());
+    }
 
 }
